--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
                     <p>Click Here</p>
                     <div class="card-arrow">→</div>
                 </div>
+               <div class="glass-card main-card" onclick="window.location.href='game.html'">
+    <div class="card-icon">🎮🕹️👾</div>
+    <h2>Game and Fun</h2>
+    <p>Gaming and Fun Activities zone</p>
+    <p>Click Here</p>
+    <div class="card-arrow">→</div>
+</div>
+
             </div>
         </div>
     </div>
