--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <!-- Theme Selector -->
 <div class="theme-selector-container">
-    <button class="theme-toggle-btn" id="theme-toggle-btn">🎨 Change Theme<p>Click Here</p></button>
+    <button class="theme-toggle-btn" id="theme-toggle-btn">🎨 Click To Change Theme</button>
     <div class="theme-dropdown" id="theme-dropdown">
         <button class="theme-option" data-theme="girly">💕 Girly</button>
         <button class="theme-option" data-theme="boy">🦇 Boy</button>
