--- a/game.html
+++ b/game.html
@@ -42,14 +42,14 @@
                         <img src="malecr.jpg" alt="Priyangshu">
                     </div>
                     <h3 class="character-name">Priyangshu</h3>
-                    <div class="character-badge male-badge">Male CR</div>
+                    <div class="character-badge male-badge">Male CR🗿</div>
                 </div>
                 <div class="character-card" data-character="female">
                     <div class="character-image">
                         <img src="femalecr.jpg" alt="Shahiba">
                     </div>
                     <h3 class="character-name">Shahiba</h3>
-                    <div class="character-badge female-badge">Female CR</div>
+                    <div class="character-badge female-badge">Female CR🎀</div>
                 </div>
             </div>
         </div>
