--- a/game.html
+++ b/game.html
@@ -11,7 +11,7 @@
     <div id="platformScreen" class="screen active">
         <div class="container">
             <h1 class="game-title">Attendance Avoider</h1>
-            <p class="subtitle">Choose Your Platform</p>
+            <p class="subtitle">Choose Your Platform(mobile or Pc)</p>
             <div class="platform-buttons">
                 <button class="platform-btn" data-platform="mobile">
                     <svg class="platform-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
