--- a/index.html
+++ b/index.html
@@ -308,6 +308,7 @@
                 </div>
                 <ul class="file-list">
                     <li><a href="https://drive.google.com/file/d/1gjpgQz-SXD1OTDuY32xc8jgyYo6uPe0p/view?usp=drive_link" target="_blank" class="file-link">📝 OS Question Paper (2019)</a></li>
+                     <li><a href="https://drive.google.com/file/d/1fNCGpr8DzuPe-Q1-lhG5zkCCkERs8Ghl/view?usp=drive_link" target="_blank" class="file-link">📝 OS,Python, Java, Co&A 2022 Combined Paper</a></li>
                 </ul>
             </div>
 
