--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                             <li><a href="https://drive.google.com/file/d/1PZ2RF5gHNdHHKBlD3uoAD1idyWuvFAI9/view?usp=drive_link" target="_blank" class="file-link">📄 COA cat -1.pdf(Click Here)</a></li>
                             <li><a href="https://drive.google.com/file/d/1dV_RBAFLVuSftipxw8LC02AGDuW533r0/view?usp=drive_link" target="_blank" class="file-link">📄 COA notes.pdf<p>(This are  older but complete notes from our Respected senior 2024 batch of Ritabrat so they may be not perfect for our syllabus but can be a good source reference so i prefer class notes more)</p></a></li>
                             <li><a href="https://drive.google.com/file/d/1nAyL5kuxJMMu27POVXWF-jWbR9laLVbR/view?usp=drive_link" target="_blank" class="file-link">📄 COA....pdf</a></li>
+                            <li><a href="https://drive.google.com/file/d/1P19AcYhkc7SnYfpTXwrkYSuXldq9biN9/view?usp=drive_link" target="_blank" class="file-link">📄 COA Cat-2 priyanuj notes</a></li>
                         </ul>
                     </div>
                 </div>
@@ -110,6 +111,7 @@
                             <li><a href="https://drive.google.com/file/d/1UQUqzo6bXW2vTugbEhHIeNwE3ZXapjbR/view?usp=drive_link" target="_blank" class="file-link">📄 Daa 2022 Qpaper.pdf</a></li>
                             <li><a href="https://drive.google.com/file/d/1nTkc2l7h1nUJmwTLUicKtrEqN4sqfDUq/view?usp=drive_link" target="_blank" class="file-link">📄 DAA....pdf</a></li>
                             <li><a href="https://drive.google.com/file/d/1gj2oti52E12Yt4P7hzt4Ya3PbPrLmHlp/view?usp=drive_link" target="_blank" class="file-link">📄 daa.pdf<p>(This are  older but complete notes from our Respected senior 2024 batch Ritabrat so they may be not perfect so i prefer class notes more)</p></a></li>
+                         <li><a href="https://drive.google.com/file/d/13TVcuUNlF5pcb28RO7lWOxte1VK4qwo2/view?usp=drive_link" target="_blank" class="file-link">📄 Cat-2 Priyanuj Notes</a></li>
                         </ul>
                     </div>
                 </div>
@@ -135,6 +137,7 @@
                             <li><a href="https://drive.google.com/file/d/1pxBHUk9YdiAnLL0M2GmBd20jmqQDWBBO/view?usp=drive_link" target="_blank" class="file-link">📄 JAVA CAT-1.pdf</a></li>
                             <li><a href="https://drive.google.com/file/d/1EWiZ2zqiydVwKzhJLn8l7E9T-jNVxb-_/view?usp=drive_link" target="_blank" class="file-link">📄 Java notes.pdf<p>(This are  older but complete notes from our Respected senior 2024 batch Ritabrat so they may be not perfect so i prefer class notes more)</p></a></li>
                             <li><a href="https://drive.google.com/file/d/1fNCGpr8DzuPe-Q1-lhG5zkCCkERs8Ghl/view?usp=drive_link" target="_blank" class="file-link">📄 Python & Java, OS, Co&A 2022 Qpaper.pdf</a></li>
+                         <li><a href="https://drive.google.com/file/d/1F85PXVz6EQoDBVWftlGHxpufM3N3vXid/view?usp=drive_link" target="_blank" class="file-link">📄Priyanuj Java Cat-2 Notes</a></li>
                         </ul>
                     </div>
                 </div>
@@ -200,7 +203,8 @@
                             <li><a href="https://drive.google.com/file/d/1QFi08a01JyjvcbiX6kN75d40XneLE3zX/view?usp=drive_link" target="_blank" class="file-link">📄 OS cat -1.pdf</a></li>
                             <li><a href="https://drive.google.com/file/d/1gjpgQz-SXD1OTDuY32xc8jgyYo6uPe0p/view?usp=drive_link" target="_blank" class="file-link">📄 OS Question Paper (2019).pdf</a></li>
                             <li><a href="https://drive.google.com/file/d/1xPUBvR8eFVuKrwIS394V0QNyvCNkObyU/view?usp=drive_link" target="_blank" class="file-link">📄 OS....pdf<p>(This are  older but complete notes from our Respected senior 2024 batch Ritabrat so they may be not perfect so i prefer class notes more)</p></a></li>
-                        </ul>
+                    <li><a href="https://drive.google.com/file/d/1_VBLFfLXVgGoe_yQ3UP9pydLwpMS2t7e/view?usp=drive_link" target="_blank" class="file-link">📄Priyanuj os cat-2 notes</a></li>
+                    </ul>
                     </div>
                 </div>
             </div>
