--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
                             <li><a href="https://drive.google.com/file/d/1EWiZ2zqiydVwKzhJLn8l7E9T-jNVxb-_/view?usp=drive_link" target="_blank" class="file-link">📄 Java notes.pdf<p>(This are  older but complete notes from our Respected senior 2024 batch Ritabrat so they may be not perfect so i prefer class notes more)</p></a></li>
                             <li><a href="https://drive.google.com/file/d/1fNCGpr8DzuPe-Q1-lhG5zkCCkERs8Ghl/view?usp=drive_link" target="_blank" class="file-link">📄 Python & Java, OS, Co&A 2022 Qpaper.pdf</a></li>
                          <li><a href="https://drive.google.com/file/d/1F85PXVz6EQoDBVWftlGHxpufM3N3vXid/view?usp=drive_link" target="_blank" class="file-link">📄Priyanuj Java Cat-2 Notes</a></li>
+                         <li><a href="https://drive.google.com/file/d/1NmsrCHP_BxU26IIHDpUpyFERpW8BOASw/view?usp=sharing" target="_blank" class="file-link">📄 Java Cat-2 Mam notes Merged</a></li>
                         </ul>
                     </div>
                 </div>
